# llvm-dead-code-opt

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: DCEPass.hpp
src/: DCEPass.cpp  EliminateDeadAllocas.cpp  EliminateDeadBB.cpp
tests/: test.c  test1.ll  test2.ll  test3.ll
tests/extensive/: dead_advanced.ll  dead_alloca.ll  escape_advanced.ll  escape_alloca.ll  forwarder.ll  live_alloca.ll  memcpy.ll  memcpy_dead.ll  phi.ll  ptrtoint.ll  redundant_branch.ll  unreachable.ll  volatile.ll
tests/output/: out.ll
